# mining-coin

./: .gitignore  README.md  main.py  pyproject.toml  rentabilidade_mineracao.csv  requirements.txt
src/: benchmark.py  benchmark_provider.py  benchmark_selector.py  coins.py  discord_notification.py  dto_specs.py  dto_wins.py  email_setup.py  fetch_rent_rate.py  logger.py  machine_attributes.py  main.py  orchestrator_miner.py  power_cpu.py  wallet_checker.py  whattomine_provider.py  xmrig.py
static/: email_template.html
static/templates/: email_template.html
tests/: test_benchmark_selector.py  test_orchestrator.py
utils/: discord_notification.py  email_setup.py
